# nook-api-python-example

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
myapp/: .env.example  app.py  cache.py  config.py  curl-examples.sh  dependencies.py  main.py  oauth.py
myapp-frontend/: package-lock.json  package.json
myapp-frontend/public/: index.html  manifest.json
myapp-frontend/src/: App.css  App.js  api.js
myapp/routers/: auth.py  proxy.py
